fix(NetworkBar): Adding z-index 1

--- a/src/style/components/_networkbar.scss
+++ b/src/style/components/_networkbar.scss
@@ -8,6 +8,7 @@
 }
 
 .network-bar {
+  z-index: 1;
   position: absolute;
   top: 0;
   padding: 5px;
